adicionando novas rotas com novas funcionalidades para a aplicacao
