# src/controllers/accounting.ts
@@ -7,40 +7,59 @@ import { ProductModel } from "../models/Product"
 
 interface ProductsDTO {
   name: string;
-  description: string;
+  earnOrSpend: string;
   price: number;
   id: string;
 }
 
 
-router.get("/all", async (request, response) => {
+router.get("/all", ensuredAuthenticated, async (request, response) => {
   const listProducts = await ProductModel.find()
   return response.json(listProducts);
 });
 
-router.get("/findByName", async (request, response) => {
-  const { name } = request.query;
+router.get("/summary", ensuredAuthenticated, async (request, response) => {
+  
+  const listProducts = await ProductModel.find()
+  
+  // return response.json(listProducts);
 
-  try {
+  // Array de objetos com a estrutura {name: x, earnOrSpend: x, price: x}
+  const transactions = listProducts
 
-    const regex = new RegExp(`^${name}`, 'i');
-
-    const findProductByName = await ProductModel.find({ name: regex })
-
-    if(!findProductByName) {
-      response.status(422).json({ message: 'O Produto não foi encontrado!' })
-      return
+  // Use o método reduce para somar o valor dos objetos com earnOrSpend igual a 'earn'
+  const totalEarn = transactions.reduce((acc, transaction) => {
+    if (transaction.earnOrSpend === "earn") {
+      return acc + transaction.price;
     }
-    
-    response.status(200).json(findProductByName)
+    return acc;
+  }, 0);
 
-  } catch (error) {
-    response.status(500).json({ error: error })
-  }
+  // Use o método reduce para subtrair o valor dos objetos com earnOrSpend igual a 'spend'
+  const totalSpend = transactions.reduce((acc, transaction) => {
+    if (transaction.earnOrSpend === "spend") {
+      return acc - transaction.price;
+    }
+    return acc;
+  }, 0);
+
+  // Exibe o resultado
+  console.log(`Total de ganhos: R$${totalEarn}`);
+  console.log(`Total de gastos: R$${totalSpend}`);
+
+  const summary = totalEarn + totalSpend
+
+  
+  return response.json({
+    totalEarn: totalEarn,
+    totalSpend: totalSpend,
+    summary: summary
+  });
+
 
 });
 
-router.get("/:id", async (request, response) => {
+router.get("/:id", ensuredAuthenticated, async (request, response) => {
   const { id } = request.params;
   
   try {
@@ -59,17 +78,17 @@ router.get("/:id", async (request, response) => {
 
 });
 
-router.post("", ensuredAuthenticated, async (request, response) => {
-  const { name, description, price } = request.body;
+router.post("/", ensuredAuthenticated, async (request, response) => {
+  const { name, earnOrSpend, price } = request.body;
 
   if (!name) { response.status(422).json({ error: 'O nome é obrigatório' }); return }
 
-  if (!description) { response.status(422).json({ error: 'A descrição é obrigatória' }); return }
+  if (!earnOrSpend) { response.status(422).json({ error: 'A earnOrSpend é obrigatória' }); return }
 
   if (!price) { response.status(422).json({ error: 'O preço é obrigatório' }); return }
 
   const product: ProductsDTO = {
-    description,
+    earnOrSpend,
     name,
     price,
     id: uuid(),
@@ -79,7 +98,7 @@ router.post("", ensuredAuthenticated, async (request, response) => {
     //* criando dados
     await ProductModel.create(product)
     
-    response.status(201).json({ message: 'Produto inserido no sistema' })
+    response.status(201).json({ message: 'Accounting inserido no sistema' })
 
   } catch (error) {
     response.status(500).json({ error: error })
@@ -89,11 +108,11 @@ router.post("", ensuredAuthenticated, async (request, response) => {
 
 router.put("/:id", ensuredAuthenticated, async (request, response) => {
   const { id } = request.params;
-  const { name, description, price } = request.body;
+  const { name, earnOrSpend, price } = request.body;
 
   const prod = {
     name,
-    description,
+    earnOrSpend,
     price
   }
 
@@ -129,7 +148,7 @@ router.delete("/:id", ensuredAuthenticated, async (request, response) => {
 
     await ProductModel.deleteOne({_id: id})
 
-    response.status(200).json({ message: 'Usuário removido com sucesso!' })
+    response.status(200).json({ message: 'item removido com sucesso!' })
     
   } catch (error) {
     response.status(500).json({ error: error })
